Simkl design tweak, fix Allocine when no critic ratings

--- a/options.html
+++ b/options.html
@@ -207,9 +207,9 @@
         </div>
     </div>
     <div>
-        <h3>SIMKL</h3>
+        <h3>Simkl</h3>
         <div>
-            <label for="simkl-enabled">Display SIMKL:</label>
+            <label for="simkl-enabled">Display Simkl:</label>
             <input type="checkbox" id="simkl-enabled" permission="https://api.simkl.com/*" />
         </div>
         <div class="div-request-permission">
