--- a/options.html
+++ b/options.html
@@ -212,7 +212,7 @@
         <h3>Simkl</h3>
         <div>
             <label for="simkl-enabled">Display Simkl:</label>
-            <input type="checkbox" id="simkl-enabled" permission="https://api.simkl.com/*" />
+            <input type="checkbox" id="simkl-enabled" permission="https://api.simkl.com/*" class="setting" />
         </div>
         <div class="div-request-permission">
             <label style="color: red;">! Missing Permission !</label>
@@ -223,7 +223,7 @@
         <h3>AlloCiné</h3>
         <div>
             <label for="allocine-enabled">Display AlloCiné:</label>
-            <input type="checkbox" id="allocine-enabled" permission="https://www.allocine.fr/*" subid="allo-div" />
+            <input type="checkbox" id="allocine-enabled" permission="https://www.allocine.fr/*" subid="allo-div"  class="setting" />
         </div>
         <div class="div-request-permission">
             <label style="color: red;">! Missing Permission !</label>
@@ -232,15 +232,15 @@
         <div id="allo-div" class="disabled">
             <div>
                 <label for="allocine-users-enabled">Display user ratings:</label>
-                <input type="checkbox" id="allocine-users-enabled" />
+                <input type="checkbox" id="allocine-users-enabled"  class="setting" />
             </div>
             <div>
                 <label for="allocine-critic-enabled">Display critic ratings:</label>
-                <input type="checkbox" id="allocine-critic-enabled" />
+                <input type="checkbox" id="allocine-critic-enabled"  class="setting" />
             </div>
             <div>
                 <label for="allocine-style">Display Style:</label>
-                <select id="allocine-style" subid="allo-view-div" subidvalue="histogram">
+                <select id="allocine-style" subid="allo-view-div" subidvalue="histogram" class="setting" >
                     <option value="histogram">Histogram Graph</option>
                     <option value="ratings">Side-by-side Ratings</option>
                 </select>
@@ -248,7 +248,7 @@
             <div id="allo-view-div">
                 <div>
                     <label for="allocine-default-view">Default ratings view:</label>
-                    <select id="allocine-default-view">
+                    <select id="allocine-default-view" class="setting" >
                         <option value="user">User</option>
                         <option value="critic">Critic</option>
                     </select>
