--- a/options.html
+++ b/options.html
@@ -298,7 +298,7 @@
     <hr width="100%">
 
     <div>
-        <h3>Misc</h3>
+        <h3>Miscellaneous</h3>
         <div>
             <label for="convert-ratings">Convert ratings:</label>
             <select id="convert-ratings">
@@ -339,6 +339,10 @@
         <div>
             <label for="hide-ratings-enabled">Hide additional ratings behind a 'Show More' button:</label>
             <input type="checkbox" id="hide-ratings-enabled" />
+        </div>
+        <div>
+            <label for="tooltip-show-details">Display tooltips on page:</label>
+            <input type="checkbox" id="tooltip-show-details" />
         </div>
     </div>
 
