Fix for new settings

--- a/options.html
+++ b/options.html
@@ -332,7 +332,7 @@
         </div -->
         <div>
             <label for="replace-fans">Replace 'Fans' with Rating Count:</label>
-            <select id="replace-fans">
+            <select id="replace-fans" class="setting">
                 <option value="false">Leave unchanged</option>
                 <option value="replace">Replace</option>
                 <option value="both">Side-by-side</option>
@@ -344,7 +344,7 @@
         </div>
         <div>
             <label for="tooltip-show-details">Display tooltips on page:</label>
-            <input type="checkbox" id="tooltip-show-details" />
+            <input type="checkbox" id="tooltip-show-details" class="setting"/>
         </div>
     </div>
 
