--- a/options.html
+++ b/options.html
@@ -354,7 +354,7 @@
         <h3>Google Search</h3>
         <div>
             <label for="google">Always display Letterboxd score on Google searches:</label>
-            <input type="checkbox" id="google" permission="https://www.google.com/search*" permissionBrowser="scripting" contentScript="google2letterboxd.js" contentScriptID="google2letterboxd" />
+            <input type="checkbox" id="google" permission="https://www.google.com/search*" permissionBrowser="scripting" contentScript="google2letterboxd.js" contentScriptID="google2letterboxd" class="setting" />
         </div>
     </div>
 
