--- a/options.html
+++ b/options.html
@@ -37,7 +37,9 @@
         h3,
         label,
         p,
-        a {
+        a,
+        input#export,
+        input#import {
             margin-left: 15px;
             margin-right: 15px;
         }
@@ -364,6 +366,19 @@
         <div class="div-request-contentscript">
             <label style="color: red;">! Missing Content Script !</label>
             <input type="button" id="google" class="request-contentscript" permissionTarget="google" value="Request Content Script"/>
+        </div>
+    </div>
+
+    <hr width="100%">
+
+    <div>
+        <h3>Import/Export Settings</h3>
+        <div>
+            <input type="button" id="export" class="request-permission" value="Export to File" />
+        </div>
+        <div>
+            <input type="button" id="import" value="Import from File" />
+            <input type="file" accept="application/json" id="importpicker">
         </div>
     </div>
 
