--- a/options.html
+++ b/options.html
@@ -295,20 +295,24 @@
     <div>
         <h3>Rankings</h3>
         <div>
-            <label for="tspdt-enabled">Show "They Shoot Pictures, Don't They?" top 1000 rankings:</label>
-            <input type="checkbox" id="tspdt-enabled" permission="https://www.theyshootpictures.com/*" class="setting" />
-        </div>
-        <div class="div-request-permission">
-            <label style="color: red;">! Missing Permission !</label>
-            <input type="button" id="tspdt-permissions" class="request-permission" permissionTarget="tspdt-enabled" value="Request Permission"/>
+            <div>
+                <label for="tspdt-enabled">Show "They Shoot Pictures, Don't They?" top 1000 rankings:</label>
+                <input type="checkbox" id="tspdt-enabled" permission="https://www.theyshootpictures.com/*" class="setting" />
+            </div>
+            <div class="div-request-permission">
+                <label style="color: red;">! Missing Permission !</label>
+                <input type="button" id="tspdt-permissions" class="request-permission" permissionTarget="tspdt-enabled" value="Request Permission"/>
+            </div>
         </div>
         <div>
-            <label for="bfi-enabled">Show "BFI Sight and Sound" top 250 rankings:</label>
-            <input type="checkbox" id="bfi-enabled" permission="https://www.bfi.org.uk/*" class="setting" />
-        </div>
-        <div class="div-request-permission">
-            <label style="color: red;">! Missing Permission !</label>
-            <input type="button" id="bfi-permissions" class="request-permission" permissionTarget="bfi-enabled" value="Request Permission"/>
+            <div>
+                <label for="bfi-enabled">Show "BFI Sight and Sound" top 250 rankings:</label>
+                <input type="checkbox" id="bfi-enabled" permission="https://www.bfi.org.uk/*" class="setting" />
+            </div>
+            <div class="div-request-permission">
+                <label style="color: red;">! Missing Permission !</label>
+                <input type="button" id="bfi-permissions" class="request-permission" permissionTarget="bfi-enabled" value="Request Permission"/>
+            </div>
         </div>
     </div>
 
