Button to request all missing permissions

--- a/options.html
+++ b/options.html
@@ -93,6 +93,14 @@
 </head>
 
 <body>
+    <div id="requestalldiv">
+        <h3>Missing Permissions</h3>
+        <div>
+            <p>You are missing some permissions needed for certain enabled settings.</p>
+            <input type="button" id="requestall" value="Request Missing Permissions" />
+        </div>
+        <hr width="100%">
+    </div>
     <div>
         <h3>IMDb</h3>
         <div>
