--- a/restore.html
+++ b/restore.html
@@ -96,8 +96,9 @@
     <div>
         <h3>Import Settings From File</h3>
         <div>
-            <input type="button" id="import" value="Import from File" />
             <input type="file" accept="application/json" id="importpicker">
+            <input type="button" id="import" value="Import from File" />
+            <p>This will return back to the settings to allow you to request any missing permissions.</p>
         </div>
     </div>
 
