Extra browser check for restore page

--- a/options.html
+++ b/options.html
@@ -408,7 +408,8 @@
         </div>
         <div id="importdivandroid" style="display:none">
             <input type="button" id="importbutton" value="Import from File" />
-            <p>This will open a separate tab. Please make sure to accept the 'tabs' permission and close the add-on options if it does close automatically.</p>
+            <p>This will open the restore in a separate tab.</p>
+            <p id="tabpermissionreminder">This requires the 'tabs' permission to open the new tab. The request pop-up will likely open behind this due to a bug with FireFox.</p>
         </div>
         <div>
             <input type="button" id="reset" value="Reset settings to default" />
