--- a/src/common/options.html
+++ b/src/common/options.html
@@ -5,100 +5,20 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            --body-text-color: #000;
-            --body-back-color: #ffffff;
-            --body-text-alt-color: #7d7d7d;
-
-            color: var(--body-text-color);
-            background-color: var(--body-back-color);
-
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
-            width: 500px;
-        }
-
-        /* Color scheme */
-        @media (prefers-color-scheme: light) {
-            body {
-                --body-text-color: #000;
-                --body-back-color: #ffffff;
-                --body-text-alt-color: #7d7d7d;
-            }
-        }
-
-        @media (prefers-color-scheme: dark) {
-            body {
-                --body-text-color: #f4f4f4;
-                --body-back-color: #23222b;
-                --body-text-alt-color: #a3a2a7;
-            }
-        }
-
-        h3,
-        label,
-        p,
-        a,
-        input#export,
-        input#import,
-        input#reset,
-        input#importbutton,
-        input#importpicker,
-        input#requestall {
-            margin-left: 15px;
-            margin-right: 15px;
-        }
-
-        input#export,
-        input#import{
-            margin-top: 5px;
-        }
-        
-        input#reset {
-            margin-top: 25px;
-        }
-
-        p {
-            margin-top: 0px;
-            font-style: italic;
-            font-size: 11px;
-            width: 95%;
-            max-width: 450px;
-            color: var(--body-text-alt-color);
-        }
-
-        a{
-            color: rgb(51, 167, 255);
-            width: 95%;
-            text-decoration: none;
-        }
-        a:hover{
-            opacity: 50%;
-            text-decoration: underline;
-        }
-
-        label {
-            display: inline-block;
-            width: 175px;
-            margin-bottom: 10px;
-        }
-        
-        .div-request-permission, .div-request-contentscript{
-            display: none;
-        }
-        .div-request-permission label, .div-request-contentscript label{
-            font-size: 15px;
-        }
-
-        .disabled{
-            pointer-events: none;
-            opacity: 50%;
-        }
-    </style>
+    <link rel="stylesheet" href="options.css">
 </head>
 
 <body>
+    <div class="logo-holder">
+        <div>
+            <img class="logo" src="icons/icon128.png" alt="Letterboxd Extras" title="Letterboxd Extras">
+        </div>
+        <div>
+            <h2 class="logotext">Letterboxd Extras Options</h3>
+        </div>
+        <hr width="100%">
+    </div>
+
     <div id="requestalldiv">
         <h3>Missing Permissions</h3>
         <div>
@@ -111,28 +31,28 @@
         <h3>IMDb</h3>
         <div>
             <label for="imdb-enabled">Display IMDb:</label>
-            <input type="checkbox" id="imdb-enabled" class="setting"/>
+            <input type="checkbox" id="imdb-enabled" class="setting" />
         </div>
     </div>
     <div>
         <h3>MyAnimeList</h3>
         <div>
             <label for="mal-enabled">Display MyAnimeList:</label>
-            <input type="checkbox" id="mal-enabled" class="setting"/>
+            <input type="checkbox" id="mal-enabled" class="setting" />
         </div>
     </div>
     <div>
         <h3>AniList</h3>
         <div>
             <label for="al-enabled">Display AniList:</label>
-            <input type="checkbox" id="al-enabled" class="setting"/>
+            <input type="checkbox" id="al-enabled" class="setting" />
         </div>
     </div>
     <div>
         <h3>Rotten Tomatoes</h3>
         <div>
             <label for="tomato-enabled">Display Rotten Tomatoes:</label>
-            <input type="checkbox" id="tomato-enabled" class="setting" subid="tomato-div"/>
+            <input type="checkbox" id="tomato-enabled" class="setting" subid="tomato-div" />
         </div>
         <div id="tomato-div">
             <div>
@@ -171,7 +91,7 @@
         <h3>Metacritic</h3>
         <div>
             <label for="metacritic-enabled">Display Metacritic:</label>
-            <input type="checkbox" id="metacritic-enabled" class="setting" subid="meta-div"/>
+            <input type="checkbox" id="metacritic-enabled" class="setting" subid="meta-div" />
         </div>
         <div id="meta-div">
             <div>
@@ -200,11 +120,13 @@
         <h3>SensCritique</h3>
         <div>
             <label for="senscritique-enabled">Display SensCritique:</label>
-            <input type="checkbox" id="senscritique-enabled" permission="https://apollo.senscritique.com/*" class="setting" subid="sens-div"/>
+            <input type="checkbox" id="senscritique-enabled" permission="https://apollo.senscritique.com/*"
+                class="setting" subid="sens-div" />
         </div>
         <div class="div-request-permission">
             <label style="color: red;">! Missing Permission !</label>
-            <input type="button" id="senscritique-permissions" class="request-permission" permissionTarget="senscritique-enabled" value="Request Permission"/>
+            <input type="button" id="senscritique-permissions" class="request-permission"
+                permissionTarget="senscritique-enabled" value="Request Permission" />
         </div>
         <div id="sens-div" class="disabled">
             <div>
@@ -217,22 +139,24 @@
         <h3>MUBI</h3>
         <div>
             <label for="mubi-enabled">Display MUBI:</label>
-            <input type="checkbox" id="mubi-enabled" permission="https://api.mubi.com/*" class="setting"/>
+            <input type="checkbox" id="mubi-enabled" permission="https://api.mubi.com/*" class="setting" />
         </div>
         <div class="div-request-permission">
             <label style="color: red;">! Missing Permission !</label>
-            <input type="button" id="mubi-permissions" class="request-permission" permissionTarget="mubi-enabled" value="Request Permission"/>
+            <input type="button" id="mubi-permissions" class="request-permission" permissionTarget="mubi-enabled"
+                value="Request Permission" />
         </div>
     </div>
     <div>
         <h3>FilmAffinity</h3>
         <div>
             <label for="filmaff-enabled">Display FilmAffinity:</label>
-            <input type="checkbox" id="filmaff-enabled" permission="https://*.filmaffinity.com/*" class="setting"/>
+            <input type="checkbox" id="filmaff-enabled" permission="https://*.filmaffinity.com/*" class="setting" />
         </div>
         <div class="div-request-permission">
             <label style="color: red;">! Missing Permission !</label>
-            <input type="button" id="filmaff-permissions" class="request-permission" permissionTarget="filmaff-enabled" value="Request Permission"/>
+            <input type="button" id="filmaff-permissions" class="request-permission" permissionTarget="filmaff-enabled"
+                value="Request Permission" />
         </div>
     </div>
     <div>
@@ -243,31 +167,34 @@
         </div>
         <div class="div-request-permission">
             <label style="color: red;">! Missing Permission !</label>
-            <input type="button" id="simkl-permissions" class="request-permission" permissionTarget="simkl-enabled" value="Request Permission"/>
+            <input type="button" id="simkl-permissions" class="request-permission" permissionTarget="simkl-enabled"
+                value="Request Permission" />
         </div>
     </div>
     <div>
         <h3>AlloCiné</h3>
         <div>
             <label for="allocine-enabled">Display AlloCiné:</label>
-            <input type="checkbox" id="allocine-enabled" permission="https://www.allocine.fr/*" subid="allo-div"  class="setting" />
+            <input type="checkbox" id="allocine-enabled" permission="https://www.allocine.fr/*" subid="allo-div"
+                class="setting" />
         </div>
         <div class="div-request-permission">
             <label style="color: red;">! Missing Permission !</label>
-            <input type="button" id="allocine-permissions" class="request-permission" permissionTarget="allocine-enabled" value="Request Permission"/>
+            <input type="button" id="allocine-permissions" class="request-permission"
+                permissionTarget="allocine-enabled" value="Request Permission" />
         </div>
         <div id="allo-div" class="disabled">
             <div>
                 <label for="allocine-users-enabled">Display user ratings:</label>
-                <input type="checkbox" id="allocine-users-enabled"  class="setting" />
+                <input type="checkbox" id="allocine-users-enabled" class="setting" />
             </div>
             <div>
                 <label for="allocine-critic-enabled">Display critic ratings:</label>
-                <input type="checkbox" id="allocine-critic-enabled"  class="setting" />
+                <input type="checkbox" id="allocine-critic-enabled" class="setting" />
             </div>
             <div>
                 <label for="allocine-style">Display Style:</label>
-                <select id="allocine-style" subid="allo-view-div" subidvalue="histogram" class="setting" >
+                <select id="allocine-style" subid="allo-view-div" subidvalue="histogram" class="setting">
                     <option value="histogram">Histogram Graph</option>
                     <option value="ratings">Side-by-side Ratings</option>
                 </select>
@@ -275,7 +202,7 @@
             <div id="allo-view-div">
                 <div>
                     <label for="allocine-default-view">Default ratings view:</label>
-                    <select id="allocine-default-view" class="setting" >
+                    <select id="allocine-default-view" class="setting">
                         <option value="user">User</option>
                         <option value="critic">Critic</option>
                     </select>
@@ -287,7 +214,7 @@
         <h3>CinemaScore</h3>
         <div>
             <label for="cinema-enabled">Display CinemaScore:</label>
-            <input type="checkbox" id="cinema-enabled" class="setting"/>
+            <input type="checkbox" id="cinema-enabled" class="setting" />
         </div>
     </div>
 
@@ -297,7 +224,7 @@
         <h3>Search</h3>
         <div>
             <label for="search-redirect">Default results to films:</label>
-            <input type="checkbox" id="search-redirect" class="setting"/>
+            <input type="checkbox" id="search-redirect" class="setting" />
             <p>Defaults the Letterboxd search to only show results for films, rather than showing all results.</p>
         </div>
     </div>
@@ -309,11 +236,13 @@
         <div>
             <div>
                 <label for="tspdt-enabled">Show "They Shoot Pictures, Don't They?" top 1000 rankings:</label>
-                <input type="checkbox" id="tspdt-enabled" permission="https://www.theyshootpictures.com/*" class="setting" />
+                <input type="checkbox" id="tspdt-enabled" permission="https://www.theyshootpictures.com/*"
+                    class="setting" />
             </div>
             <div class="div-request-permission">
                 <label style="color: red;">! Missing Permission !</label>
-                <input type="button" id="tspdt-permissions" class="request-permission" permissionTarget="tspdt-enabled" value="Request Permission"/>
+                <input type="button" id="tspdt-permissions" class="request-permission" permissionTarget="tspdt-enabled"
+                    value="Request Permission" />
             </div>
         </div>
         <div>
@@ -323,7 +252,8 @@
             </div>
             <div class="div-request-permission">
                 <label style="color: red;">! Missing Permission !</label>
-                <input type="button" id="bfi-permissions" class="request-permission" permissionTarget="bfi-enabled" value="Request Permission"/>
+                <input type="button" id="bfi-permissions" class="request-permission" permissionTarget="bfi-enabled"
+                    value="Request Permission" />
             </div>
         </div>
     </div>
@@ -339,11 +269,12 @@
                 <option value="5">5-point scale</option>
                 <option value="10">10-point scale</option>
             </select>
-            <p>Converts ratings to different rating scales. Affects Letterboxd, IMDb, MyAnimeList, AniList, and Mubi.</p>
+            <p>Converts ratings to different rating scales. Affects Letterboxd, IMDb, MyAnimeList, AniList, and Mubi.
+            </p>
         </div>
         <div>
             <label for="mpa-enabled">Display MPA film ratings:</label>
-            <input type="checkbox" id="mpa-enabled" subid="mpa-div" class="setting"/>
+            <input type="checkbox" id="mpa-enabled" subid="mpa-div" class="setting" />
         </div>
         <div id="mpa-div">
             <label for="mpa-convert">Convert historical MPA ratings to modern equivalent:</label>
@@ -351,11 +282,11 @@
         </div>
         <div>
             <label for="open-same-tab">Open 'More At' links in same tab:</label>
-            <input type="checkbox" id="open-same-tab" class="setting"/>
+            <input type="checkbox" id="open-same-tab" class="setting" />
         </div>
         <div>
             <label for="mojo-link-enabled">Display BoxOfficeMojo link:</label>
-            <input type="checkbox" id="mojo-link-enabled" class="setting"/>
+            <input type="checkbox" id="mojo-link-enabled" class="setting" />
         </div>
         <!--<div>
             <label for="wiki-link-enabled">Display Wikipedia link:</label>
@@ -371,11 +302,11 @@
         </div>
         <div>
             <label for="hide-ratings-enabled">Hide additional ratings behind a 'Show More' button:</label>
-            <input type="checkbox" id="hide-ratings-enabled" class="setting"/>
+            <input type="checkbox" id="hide-ratings-enabled" class="setting" />
         </div>
         <div>
             <label for="tooltip-show-details">Display tooltips on page:</label>
-            <input type="checkbox" id="tooltip-show-details" class="setting"/>
+            <input type="checkbox" id="tooltip-show-details" class="setting" />
         </div>
     </div>
 
@@ -385,15 +316,18 @@
         <h3>Google Search</h3>
         <div>
             <label for="google">Always display Letterboxd score on Google searches:</label>
-            <input type="checkbox" id="google" permission="https://www.google.com/search*" contentScript="google2letterboxd.js" contentScriptID="google2letterboxd" class="setting" />
+            <input type="checkbox" id="google" permission="https://www.google.com/search*"
+                contentScript="google2letterboxd.js" contentScriptID="google2letterboxd" class="setting" />
         </div>
         <div class="div-request-permission">
             <label style="color: red;">! Missing Permission !</label>
-            <input type="button" id="google-permissions" class="request-permission" permissionTarget="google" value="Request Permission"/>
+            <input type="button" id="google-permissions" class="request-permission" permissionTarget="google"
+                value="Request Permission" />
         </div>
         <div class="div-request-contentscript">
             <label style="color: red;">! Missing Content Script !</label>
-            <input type="button" id="google-contentscripts" class="request-contentscript" permissionTarget="google" value="Request Content Script"/>
+            <input type="button" id="google-contentscripts" class="request-contentscript" permissionTarget="google"
+                value="Request Content Script" />
         </div>
     </div>
 
@@ -411,7 +345,8 @@
         <div id="importdivandroid" style="display:none">
             <input type="button" id="importbutton" value="Import from File" />
             <p>This will open the restore in a separate tab.</p>
-            <p id="tabpermissionreminder">This requires the 'tabs' permission to open the new tab. The request pop-up will likely open behind this due to a bug with FireFox.</p>
+            <p id="tabpermissionreminder">This requires the 'tabs' permission to open the new tab. The request pop-up
+                will likely open behind this due to a bug with FireFox.</p>
         </div>
         <div>
             <input type="button" id="reset" value="Reset settings to default" />
@@ -424,7 +359,7 @@
         <h3>Debug</h3>
         <div>
             <label for="console-log">Log calls in console:</label>
-            <input type="checkbox" id="console-log" class="setting"/>
+            <input type="checkbox" id="console-log" class="setting" />
         </div>
     </div>
 
@@ -432,7 +367,8 @@
 
     <div>
         <div>
-            <a href="https://github.com/duncanlang/Letterboxd-Extras/issues" target="_blank" style="color: rgb(51, 167, 255);">Report an issue or suggest a new feature on GitHub</a>
+            <a href="https://github.com/duncanlang/Letterboxd-Extras/issues" target="_blank"
+                style="color: rgb(51, 167, 255);">Report an issue or suggest a new feature on GitHub</a>
         </div>
     </div>
 
