firefox specific wiki link

--- a/src/common/options.html
+++ b/src/common/options.html
@@ -288,10 +288,10 @@
             <label for="mojo-link-enabled">Display BoxOfficeMojo link:</label>
             <input type="checkbox" id="mojo-link-enabled" class="setting" />
         </div>
-        <!--<div>
+        <div id="wiki-link-div">
             <label for="wiki-link-enabled">Display Wikipedia link:</label>
             <input type="checkbox" id="wiki-link-enabled" />
-        </div -->
+        </div>
         <div>
             <label for="replace-fans">Replace 'Fans' with Rating Count:</label>
             <select id="replace-fans" class="setting">
