Fixes to settings converting on update, working reset

--- a/src/common/options.html
+++ b/src/common/options.html
@@ -424,6 +424,9 @@
         <div>
             <input type="button" id="reset" value="Reset settings to default" />
         </div>
+        <div>
+            <input type="button" id="resetrecommended" value="Reset settings to recommended" />
+        </div>
     </div>
 
     <hr width="100%">
