More permission checks

--- a/src/common/options.html
+++ b/src/common/options.html
@@ -55,7 +55,7 @@
         <hr width="100%">
     </div>
     <!-- Request missing permissions -->
-    <div id="requestalldiv" style="display:none">
+    <div id="requestalldiv">
         <h4>Permissions</h4>
         <div>
             <p id="permission-warning" style="color: red; display: none;">You are missing some permissions needed for certain enabled settings.</p>
