Wikipedia link for chrome

--- a/src/common/options.html
+++ b/src/common/options.html
@@ -269,7 +269,7 @@
             <label for="mojo-link-enabled">Display BoxOfficeMojo link:</label>
             <input type="checkbox" id="mojo-link-enabled" class="setting"/>
         </div>
-        <div id="wiki-link-div">
+        <div>
             <label for="wiki-link-enabled">Display Wikipedia link:</label>
             <input type="checkbox" id="wiki-link-enabled" class="setting"/>
         </div>
