--- a/src/common/options.html
+++ b/src/common/options.html
@@ -196,6 +196,17 @@
         </div>
     </div>
     <div>
+        <h3>Kinopoisk</h3>
+        <div>
+            <label for="kinopoisk-enabled">Display Kinopoisk:</label>
+            <input type="checkbox" id="kinopoisk-enabled" permission="https://kinopoiskapiunofficial.tech/api/*" class="setting"/>
+        </div>
+        <div class="div-request-permission">
+            <label style="color: red;">! Missing Permission !</label>
+            <input type="button" id="kinopoisk-permissions" class="request-permission" permissionTarget="kinopoisk-enabled" value="Request Permission"/>
+        </div>
+    </div>
+    <div>
         <h3>CinemaScore</h3>
         <div>
             <label for="cinema-enabled">Display CinemaScore:</label>
