--- a/src/common/options.html
+++ b/src/common/options.html
@@ -205,6 +205,10 @@
             <label style="color: red;">! Missing Permission !</label>
             <input type="button" id="kinopoisk-permissions" class="request-permission" permissionTarget="kinopoisk-enabled" value="Request Permission"/>
         </div>
+        <div>
+            <label for="kinopoisk-apikey">API Key:</label>
+            <input type="text" id="kinopoisk-apikey" class="setting"/>
+        </div>
     </div>
     <div>
         <h3>CinemaScore</h3>
