Convert rating setting for all other ratings

--- a/src/common/options.html
+++ b/src/common/options.html
@@ -323,7 +323,7 @@
                 <option value="5">5-point scale</option>
                 <option value="10">10-point scale</option>
             </select>
-            <p>Converts ratings to different rating scales. Affects Letterboxd, IMDb, MyAnimeList, AniList, and Mubi.</p>
+            <p>Converts ratings to different rating scales. Affects all ratings except for Cinemascore and Rotten Tomatoes percentage.</p>
         </div>
         <div>
             <label for="open-same-tab">Open 'More At' links in same tab:</label>
