Add lost film badge, fix for filmarks

--- a/src/common/options.html
+++ b/src/common/options.html
@@ -216,7 +216,7 @@
         <h3>Filmarks</h3>
         <div>
             <label for="filmarks-enabled">Display Filmarks:</label>
-            <input type="checkbox" id="filmarks-enabled" permission="https://markuapiz.onrender.com/*" class="setting" />
+            <input type="checkbox" id="filmarks-enabled" permission="https://markuapi.apn.leapcell.app/*" class="setting" />
         </div>
         <div class="div-request-permission">
             <label style="color: red;">! Missing Permission !</label>
